--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
-	background: #1d1f20;
+	background: #164157;
 	margin:  0 4rem;
 }
+
 .header {
 	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 	font-size: 6rem;
@@ -22,4 +23,11 @@ body {
   to {
     -webkit-filter: hue-rotate(-360deg);
   }
+}
+
+#particles-js {
+	position: absolute;
+  width: 100%;
+  height: 100%;
+	background: #164157;
 }
