--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,71 @@
 body {
-	background: #164157;
-	margin:  0 4rem;
+  width: 100wh;
+  height: 90vh;
+  background: linear-gradient(-125deg, #d6e28e, #3f699b);
+  background-size: 400% 400%;
+  color: #ffffff;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
 }
 
-.header {
-	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-	font-size: 6rem;
-	font-weight:  100;
-	letter-spacing: 2px;
-	text-align: center;
-	color: #f35626;
-	background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	-webkit-animation: hue 10s infinite linear;
+.name {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-align: center;
+  position: absolute;
+  font-weight: bolder;
+  font-size: 30px;
+  /* font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif */
+  /* font-size: 400%; */
+  top: 45%;
+  right: 0%;
+  left: 0%;
 }
 
-@-webkit-keyframes hue {    
-  from {
-    -webkit-filter: hue-rotate(0deg);
+.handle {
+  font-family: inherit;
+  text-align: inherit;
+  position: inherit;
+  font-style: italic;
+  font-size: 15px;
+  top: 50%;
+  right: 0%;
+  left: 0%;
+}
+/* Manuel Pinto for the CSS background */
+@-webkit-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
   }
-  to {
-    -webkit-filter: hue-rotate(-360deg);
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
 
-#particles-js {
-	position: absolute;
-  width: 100%;
-  height: 100%;
-	background: #164157;
+@-moz-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
