--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 body {
-  width: 100wh;
+  width: 100%;
   height: 90vh;
+  /* position: fixed; */
+  overflow-y: hidden;
+  overflow-x: hidden; 
   background: linear-gradient(-125deg, #d6e28e, #3f699b);
   background-size: 400% 400%;
   color: #ffffff;
@@ -12,6 +15,19 @@ body {
 .particles-js {
     height: 100%;
     /* background: inherit; */
+}
+
+.github {
+  position: fixed;
+  bottom:0px;
+    /* bottom: 20px; */
+  left: 0px;
+}
+
+img.resize {
+  max-width: 30%;
+  max-height: 30%;  
+  link
 }
 
 .name {
