--- a/styles.css
+++ b/styles.css
@@ -58,10 +58,31 @@ img.resize {
   z-index: 1;
 }
 
-.navbar {
-  z-index: 2;
+.topnavbar {
+  background-color: #333333;
+  overflow: hidden;
 }
 
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
 /* Manuel Pinto for the CSS background */
 @-webkit-keyframes Gradient {
   0% {
