--- a/styles.css
+++ b/styles.css
@@ -70,14 +70,9 @@ img.resize {
 
 }
 
-.twitter {
+.icons {
     color: rgb(59, 91, 112);
-    font-size: 24px;
-}
-
-.mail {
-    color: rgb(59, 91, 112);
-    font-size: 20px
+    font-size: 21px;
 }
 
 /* Manuel Pinto for the CSS background */
