--- a/styles.css
+++ b/styles.css
@@ -1,73 +1,57 @@
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:700);
+
 body {
-  width: 100%;
-  height: 90vh;
-  /* position: fixed; */
-  overflow-y: hidden;
-  overflow-x: hidden;
-  background: linear-gradient(-125deg, #d6e28e, #3f699b);
-  background-size: 400% 400%;
-  color: #ffffff;
-  -webkit-animation: Gradient 15s ease infinite;
-  -moz-animation: Gradient 15s ease infinite;
-  animation: Gradient 15s ease infinite;
+    width: 100%;
+    height: 90vh;
+    /* position: fixed; */
+    overflow-y: hidden;
+    overflow-x: hidden;
+    background: linear-gradient(-125deg, #49a9cc, #50bf9c   );
+    background-size: 400% 400%;
+    color: #ffffff;
+    -webkit-animation: Gradient 15s ease infinite;
+    -moz-animation: Gradient 15s ease infinite;
+    animation: Gradient 15s ease infinite;
 }
 
 .particles-js {
     height: 100%;
-    /* background: inherit; */
 }
 
 .github {
-  position: fixed;
-  bottom:0px;
-    /* bottom: 20px; */
-  left: 0px;
+    position: fixed;
+    bottom:0px;
+    left: 0px;
 }
-
 img.resize {
-  max-width: 30%;
-  max-height: 30%;
+    max-width: 30%;
+    max-height: 30%;
 }
 
 .name {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  text-align: center;
-  position: absolute;
-  font-weight: bolder;
-  font-size: 30px;
-  /* font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif */
-  /* font-size: 400%; */
-  top: 45%;
-  right: 0%;
-  left: 0%;
+    font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
+    text-align: center;
+    position: absolute;
+    font-weight: bolder;
+    font-size: 30px;
+    top: 45%;
+    right: 0%;
+    left: 0%;
+    padding-bottom: 10px;
 }
 
 .social {
-  font-family: inherit;
-  text-align: inherit;
-  position: inherit;
-  font-size: 20px;
-  top: 90%;
-  right: 0%;
-  left: 0%;
+    font-family: inherit;
+    text-align: inherit;
+    position: inherit;
+    font-size: 20px;
+    top: 90%;
+    right: 0%;
+    left: 0%;
 }
 
 .p.js {
-  z-index: 1;
-}
-
-.topnavbar {
-    width: 30%;
-    height: 50px;
-    background-color: #eefffe;
-}
-
-.topnavbar a {
-
-}
-.topnavbar a:hover {
-
+    z-index: 1;
 }
 
 .icons {
@@ -81,39 +65,73 @@ img.resize {
     color: rgb(59, 91, 112);
 }
 
+.topnav {
+    background-color: inherit;
+    overflow: hidden;
+}
+
+ul {
+    list-style: none;
+}
+
+ul li{
+    display: inline;
+    margin: 0 20px;
+}
+
+.links {
+    font-size: 15px;
+    font-family: 'Ubuntu', sans-serif;
+    text-transform: uppercase;
+    color: #ffffff;
+    text-decoration: none;
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 5px;
+    transition: background-size .3s;
+    padding-bottom: 5px;
+}
+
+.links:hover, .links:focus {
+    padding-bottom: 5px;
+    background-size: 100% 3px;
+}
+
+
 /* Manuel Pinto for the CSS background */
 @-webkit-keyframes Gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 @-moz-keyframes Gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 @keyframes Gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
