--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,10 @@
 
 body {
     background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("static/IdealisticNecessaryHuia-size_restricted.gif");
-    /* background-image: url("static/IdealisticNecessaryHuia-size_restricted.gif"); */
-    /* background-color: rgba(0,0,0, 0.7); */
     background-repeat: no-repeat;
     background-size: cover;
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     color: black;
     font-family: 'Source Sans Pro', sans-serif;
     margin: 0;
@@ -23,13 +22,11 @@ body {
 main {
     width: 100%;
     display: block;
-    /* max-width: 520px; */
-    /* padding: 240px; */
 }
 
 .me {
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.4);
   color: white;
   border: 3px solid #f1f1f1;
   position: absolute;
@@ -46,15 +43,4 @@ h1 {
     font-size: 3em;
     font-weight: 140%;
     font-style: italic;
-}
-
-.media > a {
-    color: aliceblue;
-    transition: 0.2s;
-}
-
-.media > a:hover {
-    color: #337;
-
-    transition-duration: 0.2s;
 }
