--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,7 @@ body {
     background-size: cover;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    color: black;
-    font-family: 'Source Sans Pro', sans-serif;
+    /* font-family: 'Source Sans Pro', sans-serif; */
     margin: 0;
     padding: 0;
     min-height: 100vh;
@@ -43,4 +42,25 @@ h1 {
     font-size: 3em;
     font-weight: 140%;
     font-style: italic;
+}
+
+.navbar-nav > a {
+    font-family: 'Source Sans Pro', sans-serif  !important;
+    color: rgba(240, 248, 255, 0.4) !important;
+} 
+
+.navbar-nav > a:hover {
+    color: aliceblue !important;
+}
+
+.darkened {
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.4);
+    border-radius: 4px;
+}
+
+.navbar-nav {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%) translateY(60%);   
 }
